Finished route cleanup

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <noscript>
-      All setup people.
+      You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
     <!--
