--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/alton/1.2.1/jquery.alton.js"></script>
+    <script src="//use.typekit.net/nka7dai.js"></script>
+		<script>try{Typekit.load();}catch(e){}</script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -21,7 +25,7 @@
     -->
     <title>Unizonn</title>
   </head>
-  <body>
+  <body class="pageWrapper">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
