--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <div data-behavior="progress-bar" class="progress-bar"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -57,6 +58,7 @@
     -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.min.js"></script>
     <script src="./crack.js"></script>
+    <script src="./timeago-in-words.js"></script>
     
     <script>
       function anima() {
